--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "founder": "Factiven",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma migrate deploy && npx prisma generate && next build",
     "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
