--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 ## AniList
-CLIENT_ID="get the id from here https://anilist.co/settings/developer"
-CLIENT_SECRET="get the secret from here https://anilist.co/settings/developer"
+CLIENT_ID="17624"
+CLIENT_SECRET="2ktA96Hn1zSQaOX5VfBl971S9s2J9UXmB7vQgbLg"
 GRAPHQL_ENDPOINT="https://graphql.anilist.co"
 
 ## NextAuth
