--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DISQUS_SHORTNAME='put your disqus shortname here (optional)'
 # ADMIN_USERNAME=""
 
 ## Prisma
-DATABASE_URL="Your postgresql connection url"
+DATABASE_URL="postgres://turboanime_user:7I6ZOUVqgEQcqq016REh36FMGSqK6bHA@dpg-cntvrosf7o1s73e9rnp0-a.oregon-postgres.render.com/turboanime"
 
 ## Redis
 # If you don't want to use redis, just comment the REDIS_URL (press ctrl + / on windows or cmd + / on mac)
