--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,4 @@ DATABASE_URL="postgres://turboanime_user:7I6ZOUVqgEQcqq016REh36FMGSqK6bHA@dpg-cn
 
 ## Redis
 # If you don't want to use redis, just comment the REDIS_URL (press ctrl + / on windows or cmd + / on mac)
-REDIS_URL="redis://username:password@host:port"
+REDIS_URL="rediss://red-cntvthuct0pc73a1vn3g:Rm504aFnPIqN9v7gsPkWvrFB8fG1PCR6@oregon-redis.render.com:6379"
