--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ NEXTAUTH_URL="for development use http://localhost:3000/ and for production use 
 
 ## NextJS
 PROXY_URI="This is what I use for proxying video https://github.com/chaycee/M3U8Proxy. Don't put / at the end of the url."
-API_URI="host your own API from this repo https://github.com/consumet/api.consumet.org. Don't put / at the end of the url."
+API_URI="https://turbo-animev2-api.vercel.app"
 DISQUS_SHORTNAME='put your disqus shortname here (optional)'
 # ADMIN_USERNAME=""
 
