--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ GRAPHQL_ENDPOINT="https://graphql.anilist.co"
 
 ## NextAuth
 NEXTAUTH_SECRET='run this cmd in your bash terminal (openssl rand -base64 32) with no bracket, and paste it here'
-NEXTAUTH_URL="for development use http://localhost:3000/ and for production use your domain url"
+NEXTAUTH_URL="http://localhost:3000"
 
 ## NextJS
 PROXY_URI="This is what I use for proxying video https://github.com/chaycee/M3U8Proxy. Don't put / at the end of the url."
