--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ CLIENT_SECRET="2ktA96Hn1zSQaOX5VfBl971S9s2J9UXmB7vQgbLg"
 GRAPHQL_ENDPOINT="https://graphql.anilist.co"
 
 ## NextAuth
-NEXTAUTH_SECRET='run this cmd in your bash terminal (openssl rand -base64 32) with no bracket, and paste it here'
+NEXTAUTH_SECRET='3LEgHm4ko0+MJek3Ww9I3A=='
 NEXTAUTH_URL="http://localhost:3000"
 
 ## NextJS
